--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,7 @@ button:hover{
 .redes{
     padding: 30px;
     margin: 50px;
-    height: 150vh;
+    height: 90vh;
     border-radius: 15px;
     justify-content: center center;
     background-size: 100%;
@@ -312,8 +312,18 @@ footer{
     flex-direction: column;
     justify-content: right;
     color: red;
-    
+    font-size: 15px;
+    color: black;
+    font-weight: bolder;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 10px;
+    border: 2px solid rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    color: black;
 }
+    
 /* fin index */
 
 /* contactos */
@@ -479,10 +489,6 @@ iframe{width: 433px;}
 
 .ppf{
     width: 1000px;
-}
-
-.card{
-    display: flex;
 }
 
 /* cuidado interior */
