--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,9 @@ h4{
     font-size: 35px;
 }
 
-
+.shelter{
+    color: rgb(194, 2, 2);
+}
 
 .logo{
     display: flex;
@@ -31,9 +33,9 @@ h4{
     color: rgb(194, 2, 2);
     font-family: "adamina", sans-serif;
     font-weight: bolder;
-    background-color: rgb(231, 230, 161);
-    /* border: solid 2px black;
-    border-radius: 10px; */
+    background-color: rgb(24, 0, 0);
+    border: solid 2px black;
+    border-radius: 10px;
     font-size: 2rem;
     margin-top: -15px;
     margin-bottom: 9px;
@@ -56,7 +58,7 @@ h4{
     
 }
 .btn:hover{
-    background-color: rgb(231, 230, 161);
+    background-color: rgb(148, 11, 11);
 
 }
 
@@ -104,19 +106,20 @@ ol{
 }
 
 .email{
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     padding: 10px 40px;
+    margin-left: -30px;
     border-radius: 10px;
     border: 2px solid rgba(0,0,0,0.5);
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     color: black;
 }
 .email:hover{
-    background-color: rgb(231, 230, 161);
+    background-color: rgb(148, 11, 11);
 }
 .register{
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 10px;
@@ -125,10 +128,10 @@ ol{
     color: black;
 }
 .register:hover{
-    background-color: rgb(231, 230, 161);
+    background-color: rgb(148, 11, 11);
 }
 .login{
-    font-size: 10px;
+    font-size: 12px;
     font-weight: bold;
     padding: 10px 30px;
     border-radius: 10px;
@@ -137,7 +140,7 @@ ol{
     color: black;
 }
 .login:hover{
-    background-color: rgb(231, 230, 161);
+    background-color: rgb(148, 11, 11);
 }
 
 .container-fluid{
@@ -264,7 +267,7 @@ button{
     
 }
 button:hover{
-    background-color: rgb(231, 230, 161);
+    background-color: rgb(148, 11, 11);
 
 }
 
